my tasks complited

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "devDependencies": {
     "autoprefixer": "^8.4.1",
     "babel-core": "^6.26.3",
-    "babel-preset-env": "^1.6.1",
+    "babel-preset-env": "^1.7.0",
     "browser-sync": "^2.24.4",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
@@ -44,5 +44,7 @@
     "run-sequence": "^2.2.1",
     "stylelint": "^9.2.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "gulp-uglifyjs": "^0.6.2"
+  }
 }
